--- a/Class1114_yx2858.Rmd
+++ b/Class1114_yx2858.Rmd
@@ -102,9 +102,83 @@ rmse(wiggly_mod, test_df)
 ## Use modelr for CV 
 
 ```{r}
-
+cv_df = 
+  nonlin_df |>
+  crossv_mc(n = 100)
 ```
 
+```{r}
+cv_df |>
+  pull(train) |>
+  nth(3) |>
+  as_tibble()
+```
+
+```{r}
+cv_df = 
+  nonlin_df |>
+  crossv_mc(n = 100) |>
+  mutate(
+    train = map(train, as_tibble),
+    test = map(train, as_tibble)
+  )
+```
+
+Apply each model to all trainiing datasets, and evaluate on all testing datasets
+
+```{r}
+lin_mod_funct = function(df) {
+  lm(y ~ x, data = df)
+}
+
+cv_results =
+  cv_df |>
+  mutate(
+    linear_fit = map(train, \(df) lm(y ~ x, data = df))
+  ) |>
+  mutate(
+    rmse_linear = map2_dbl(linear_fit, test, \(mod, df) rmse(mod, df))
+  )
+```
+
+```{r}
+cv_results =
+  cv_df |> 
+  mutate(
+    linear_fit = map(train, \(df) lm(y ~ x, data = df)),
+    smooth_fit = map(train, \(df) mgcv::gam(y ~ s(x), data = df)),
+    wiggly_fit = map(train, \(df) mgcv::gam(y ~ s(x, k = 30), sp = 10e-6, data = df))
+  ) |> 
+  mutate(
+    rmse_linear = map2_dbl(linear_fit, test, \(mod, df) rmse(mod, df)),
+    rmse_smooth = map2_dbl(smooth_fit, test, \(mod, df) rmse(mod, df)),
+    rmse_wiggly = map2_dbl(wiggly_fit, test, \(mod, df) rmse(mod, df))
+  )
+```
+
+```{r}
+cv_results |> 
+  select(starts_with("rmse")) |> 
+  pivot_longer(
+    everything(),
+    names_to = "model_type",
+    values_to = "rmse",
+    names_prefix = "rmse_"
+  ) |> 
+  group_by(model_type) |> 
+  summarize(m_rmse = mean(rmse))
+
+cv_results |> 
+  select(starts_with("rmse")) |> 
+  pivot_longer(
+    everything(),
+    names_to = "model_type",
+    values_to = "rmse",
+    names_prefix = "rmse_"
+  ) |> 
+  ggplot(aes(x = model_type, y = rmse)) +
+  geom_violin()
+```
 
 
 
